[package]
name = "bilibili-client"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies.reqwest]
# version = "0.11.11"
# features = ["json", "multipart", "cookies"]

# [dependencies.tokio]
# version = "^1.19"
# features = ["sync"]

[dependencies.serde_json]
version = "1.0.85"

[dependencies.serde]
version = "1.0.144"
features = ["derive"]

# optional = true

[dependencies]
rand = "0.8.5"
# cookie_store = "0.16.1"
# reqwest_cookie_store = "0.3.0"
expire = "0.1.1"
http_api_util = "0.1.2"
http = "0.2.8"

[dependencies.awc]
version = "3.0.1"
features = ["rustls"]

[dev-dependencies.qrcode]
version = "0.12"
default-features = false

[dev-dependencies.tokio]
version = "^1.19"
features = ["sync", "rt", "rt-multi-thread","macros"]

[dev-dependencies.actix-web]
version = "4.2.1"

[[example]]
name = "awc_client"
path = "/examples/awc-client"

