[package]
name = "bilibili-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["api", "business"]
api = ["dynamic", "live", "passport", "user"]
business = ["login", "send_danmaku"]
dynamic = []
live = []
passport = []
user = []
login = []
send_danmaku = []

[dependencies.serde_json]
version = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies]
reqwest = {version="0.11", features=["json", "cookies"]}
http = "0.2.8"
cookie = { version = "0.18.0", features = ["percent-encoding"] }
rand = "0.8.5"

[dev-dependencies]
toml = "0.8.2"
qrcode = "0.12"
image = "0.24"
[dev-dependencies.tokio]
version = "^1.19"
features = ["sync", "rt", "rt-multi-thread", "macros", "fs", "process"]


